# orx-iterable

./: Cargo.toml  README.md
examples/: fn_arg_iterable.rs  stats.rs
src/: collection.rs  collection_mut.rs  exclusive.rs  iterable.rs  iterable_col.rs  iterable_mut.rs  iterable_obj.rs  iterable_once.rs  lib.rs
src/arch/: it.rs  iterable.rs  iterable_mut.rs
src/arch2/: iterable.rs  iterable_mut.rs  iterable_ref.rs
src/into_iterable/: chained.rs  cloned.rs  cloning_iter.rs  copied.rs  filtered.rs  mapped.rs  mod.rs  owned_iter.rs  owning_iterable.rs
src/into_iterable_mut/: mod.rs  mut_slice.rs
src/iterable_transformations/: chained.rs  cloned.rs  cloning_iter.rs  filter_mapped.rs  filtered.rs  flat_mapped.rs  flattened.rs  mapped.rs  mapped_while.rs  mod.rs  owning_iterable.rs  skipped.rs  taken.rs  taken_while.rs  zipped.rs
src/obj_safe/: collection_mut_obj.rs  collection_obj.rs  iterable_obj.rs  mod.rs
src/obj_safe/sources/: empty.rs  (+4 more)
src/producing_iterables/: range.rs
src/sources/: empty.rs  mod.rs  once.rs  repeat.rs  repeat_n.rs
src/special_impl/: slice.rs
src/transformations/: chained.rs  cloned.rs  cloning_iter.rs  cloning_iterable.rs  copied.rs  enumerated.rs  filter_mapped.rs  filtered.rs  flat_mapped.rs  flattened.rs  fused.rs  iterable_mut_from_slice_mut.rs  mapped.rs  mapped_while.rs  mod.rs  owning_iterable.rs  reversed.rs  skipped.rs  skipped_while.rs  stepped_by.rs  taken.rs  taken_while.rs  zipped.rs
tests/: chained.rs  collection.rs  common_testers.rs  copied_cloned.rs  custom_iterables.rs  empty.rs  enumerated.rs  fields_of_generic_iterables.rs  fields_of_iterable_objects.rs  filter_mapped.rs  filtered.rs  flat_mapped.rs  flattened.rs  fused.rs  it.rs  iterable.rs  iterable_as_field.rs  iterable_col.rs  iterable_mut.rs  iterable_mut_zzz.rs  iterable_once.rs  iterable_zzz.rs  mapped.rs  mapped_while.rs  once.rs  repeat.rs  repeat_n.rs  reversed.rs  skipped.rs  skipped_while.rs  stepped_by.rs  taken.rs  taken_while.rs  zipped.rs
(+37 files in other folders)
