[package]
name = "orx-iterable"
version = "1.3.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Defines and implements Iterable, Collection and CollectionMut traits to represent types that can be iterated over multiple times."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-iterable/"
keywords = ["iterable", "collection", "iterator", "intoiterator", "enumerable"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-self-or = { path = "../orx-self-or" }

[dev-dependencies]
arrayvec = { version = "0.7.6", default-features = false }
smallvec = { version = "1.13.2", default-features = false }

[features]
default = ["std"]
std = []
